force-app/main/default/objects/Company__c/fields/Company_Street__c.field-meta.xml
<CustomField>
    <fullName>Company_Street__c</fullName>
    <label>Company Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>