force-app/main/default/objects/Company__c/fields/Company_Zip__c.field-meta.xml
<CustomField>
    <fullName>Company_Zip__c</fullName>
    <label>Company Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>